[package]
name = "lark-github-isssue"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lark_bot_sdk = { version = "0.1.0", features = ["bitable"] }
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
octocrab = "0.41.1"
jsonwebtoken = "9.3.0"
