[package]
name = "lark-github-issue"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lark_bot_sdk_patch = { path = "./lark_bot_sdk", features = ["bitable", "drive"] }
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
octocrab = "0.33.3"
jsonwebtoken = "9.3.0"
serde_json = "1.0.128"
chrono = "0.4.38"
regex = "1.11.0"
futures-util = { version = "0.3" }
base64 = "0.22.1"
bytes = "1.7.2"
reqwest = "0.12.8"
openssl = { version = "0.10", features = ["vendored"] }
